--- a/MyLibrary2/Properties/launchSettings.json
+++ b/MyLibrary2/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:48315",
+      "applicationUrl": "http://0.0.0.0:48315",
       "sslPort": 44321
     }
   },
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5203",
+      "applicationUrl": "http://0.0.0.0:5203",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7048;http://localhost:5203",
+      "applicationUrl": "https://0.0.0.0:7048;http://0.0.0.0:5203",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
